src/components/Dropdown/Dropdown.scss
@import '../../assets/styles/global.scss';

$component: #{$prefix}-dropdown;

$icon-w-md: 20px;
$icon-h-md: 20px;
$icon-mr-md: 8px;
$icon-w-lg: 24px;
$icon-h-lg: 24px;
$icon-mr-lg: 12px;

$menu-h-md: 32px;
$menu-h-lg: 40px;

// dropdown menu icon 스타일
@mixin dropdown-menu-icon($width, $height, $margin-right) {
  .#{$component}-menu-icon {
    width: $width;
    height: $height;
    margin-right: $margin-right;

    svg {
      width: $width;
      height: $height;
    }
  }
}

// dropdown menu md size 스타일 (single, multi)
@mixin dropdown-menu-md {
  width: 136px;
  border-radius: 4px;
}

// dropdown menu lg size 스타일 (single, multi)
@mixin dropdown-menu-lg {
  width: 152px;
  border-radius: 4px;
}

.#{$component} {
  @apply mt-spacing_01 p-spacing_02 bg-color_layout_01 border-color_layout_04 shadow-shadow_v2;

  position: absolute;
  overflow: scroll;

  &::-webkit-scrollbar {
    display: none;
  }
  &.#{$component}-left {
    left: 0;
  }
  &.#{$component}-center {
    left: 50%;
    transform: translate(-50%, 0);
  }
  &.#{$component}-right {
    right: 0;
  }

  .#{$component}-menu-icon {
    display: none;
  }
}

// icon 옵션이 추가될 때 Dropdown
.#{$component}-icon-list {
  .#{$component}-menu-icon {
    display: inline;
  }

  &.#{$component}-md .#{$component}-menu-desc {
    margin-left: $icon-w-md + $icon-mr-md;
  }

  &.#{$component}-lg .#{$component}-menu-desc {
    margin-left: $icon-w-lg + $icon-mr-lg;
  }
}

.#{$component}-menu {
  @apply cursor-pointer;
  display: flex;

  &:hover {
    @apply bg-color_hover_primary;
  }
  &:active {
    @apply bg-color_active_primary;
  }
}

.#{$component}-multiLine-menu {
  flex-direction: column;
}

.#{$component}-menu-term {
  @apply text-color_text_01;

  display: flex;
  align-items: center;

  .#{$component}-menu-name {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
}

.#{$component}-menu-desc {
  @apply text-color_text_04;

  display: -webkit-box;
  margin-top: 4px;
  text-overflow: ellipsis;
  overflow: hidden;
  word-wrap: break-word;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

.#{$component}-divider {
  @apply my-spacing_02 border-solid border-color_layout_05;

  border-top-width: 1px;
}

// By Dropdown Size
.#{$component}-md {
  @include dropdown-menu-icon($icon-w-md, $icon-h-md, $icon-mr-md);

  width: 144px;
  max-height: $menu-h-md * 6.5 + 4px;
  border-radius: 6px;
  font-size: 14px;

  .#{$component}-menu {
    @include dropdown-menu-md;
    @apply px-spacing_06;
  }

  .#{$component}-singleLine-menu {
    @apply h-size_16;
  }

  .#{$component}-multiLine-menu {
    @apply py-spacing_03;
  }
}

.#{$component}-lg {
  @include dropdown-menu-icon($icon-w-lg, $icon-h-lg, $icon-mr-lg);

  width: 160px;
  max-height: $menu-h-lg * 6.5 + 4px;
  border-radius: 8px;
  font-size: 16px;

  .#{$component}-menu {
    @include dropdown-menu-lg;
    @apply px-spacing_06;
  }

  .#{$component}-singleLine-menu {
    @apply h-size_20;
  }

  .#{$component}-multiLine-menu {
    @apply py-spacing_04;
  }
}

// By Dropdown Item Type
.#{$component}-menu-danger {
  .#{$component}-menu-term {
    @apply text-color_text_danger;
  }

  svg {
    @apply fill-color_icon_danger;
  }
}

// By Dropdown Item Disabled
.#{$component}-menu-disabled {
  @apply cursor-not-allowed;

  &:hover,
  &:active {
    @apply bg-transparent;
  }

  .#{$component}-menu-term {
    @apply text-color_text_disabled;
  }
  .#{$component}-menu-desc {
    @apply text-color_text_disabled;
  }
  svg {
    @apply fill-color_icon_disabled;
  }
}

